# ros-robotino-rest-pkg

./: CMakeLists.txt  README.md  package.xml
description/: robotino.urdf  rviz_config.rviz
launch/: robotino_bringup.launch  robotino_rviz.launch  single_robot_robotino.launch
robotino_rest_pkg/: package.xml
robotino_rest_pkg/launch/: robotino_bringup.launch
robotino_rest_pkg/scripts/: analoginput.py  bumper.py  digitalinput.py  digitaloutput.py  omnidrive.py
scripts/: analoginput.py  bumper.py  digitalinput.py  digitaloutput.py  distancesensor.py  odometry.py  omnidrive.py  poweroutput.py  poweroutputcurrent.py
