<?xml version="1.0"?>
<package format="2">
  <name>ros_robotino_rest_pkg</name>
  <version>0.0.0</version>
  <description>The ros_robotino_rest_pkg package. Access Robotino using its REST-API provided by restapid found in robotino-daemons.
  Depends on python-requests package. Expanded on work from Dr. Christian Verbeek.
  </description>

  <maintainer email="jmog@hvl.no">MOJO</maintainer>
  <license>BSD</license>
  <url type="website">https://wiki.openrobotino.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
